--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,24 +1,5 @@
-.image {
-  width: 450px;
-  height: 450px;
-}
-
-.cardstyle {
-  margin-top: 20px;
-  width: auto;
-  height: auto;
-}
-
-.devIcon {
-  font-size: 70px;
-  padding-right: 12px;
-  padding-top: 10px;
-  color: rgb(70, 70, 70);
-}
-
-@media (max-width: 770px) {
-  .image {
-    width: 350px;
-    height: 350px;
-  }
+.container {
+  padding-bottom: 50px;
+  margin-bottom: 30px;
+  border-bottom: 3px solid #4b4b4b;
 }
