--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,109 @@ body {
   padding: 0;
   background: #f1ecdd;
 }
+
+/* ===== Animations ===== */
+/* Typewriter effect and Blinking cursor */
+.anim-typewriter {
+  animation: typewriter 2s steps(15) 0.5s 1 normal both,
+    blinkTextCursor 800ms steps(44) infinite normal;
+}
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+  to {
+    width: 9em;
+  }
+}
+@keyframes blinkTextCursor {
+  from {
+    border-right-color: #ff7f00;
+  }
+  to {
+    border-right-color: transparent;
+  }
+}
+/* animate icons to appear after typewriter animation */
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.anim-icons {
+  opacity: 0;
+  animation: appear 2s 3s forwards;
+}
+
 h1 {
   /* Make bold with a strong color; center*/
   font-weight: bold;
   color: #333;
   font-size: 4em;
   text-align: center;
+  margin: 20px 0;
+  /* Typewriter effect */
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 0.15em solid #ff7f00;
+  animation: blink-caret 1s step-end infinite;
+}
+h2 {
+  font-size: 2em;
+  margin: 20px 0;
 }
 p {
   font-size: 1em;
   line-height: 1.5;
   margin: 20px 0;
 }
+
+/* Header */
+.header {
+  /* Make header take whole screen */
+  width: 100%;
+  height: 100vh;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+/* Section */
+section {
+  /* Make section take whole screen */
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.container {
+  max-width: 1000px;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.scroll-container {
+  overflow: auto;
+  scroll-snap-type: y mandatory;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scroll-container::-webkit-scrollbar {
+  display: none;
+}
+.scroll-area {
+  scroll-snap-align: start;
+}
+
+/* Links */
 a {
   text-decoration: none;
   color: #333;
@@ -24,19 +115,6 @@ a {
 a.link {
   color: #ff7f00;
   text-decoration: none;
-}
-footer {
-  /* Footer at the bottom */
-  width: 100%;
-  text-align: center;
-  background-color: #333;
-  color: #fff;
-  padding: 1px;
-}
-.header {
-  /* Header at the top */
-  width: 100%;
-  text-align: center;
 }
 .links {
   /* Footer at the bottom */
@@ -48,11 +126,8 @@ footer {
   color: rgb(77, 77, 77);
   margin: 0 10px;
 }
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-}
+
+/* Grid and Cards */
 .grid {
   /* Use CSS Grid to display wide cards in a grid */
   display: grid;
@@ -69,6 +144,27 @@ footer {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 a.card:hover {
-  /* Make the whole card move up when hovered */
   transform: translateY(-5px);
+}
+.card ul {
+  list-style: none;
+  padding: 0;
+}
+.card ul li {
+  margin: 10px 0;
+  font-size: 0.9rem;
+}
+#articles .card {
+  /* Smaller cards */
+  max-width: 300px;
+}
+
+/* Footer */
+footer {
+  /* Footer at the bottom */
+  width: 100%;
+  text-align: center;
+  background-color: #333;
+  color: #fff;
+  padding: 1px;
 }
